Adjusted spacing of the projects container. Also added background highlighting for the project names so user knows which project details he is locking at. Fixed the background image of current-learning container in my-skills section also. Increased spacing between the sections.

--- a/src/app/my-projects/my-projects.scss
+++ b/src/app/my-projects/my-projects.scss
@@ -2,7 +2,7 @@ h1 {
   color: #89bcd9;
   font-size: 60px;
   text-align: center;
-  margin-top: 64px;
+  margin-top: 128px;
   margin-bottom: 64px;
 }
 
@@ -16,16 +16,26 @@ h1 {
   font-size: 30px;
   display: flex;
   gap: 48px;
-  padding-bottom: 32px;
   > div {
     &:hover {
       cursor: pointer;
       color: #f8f5ec;
     }
   }
+
+  .project-name {
+    padding: 16px 32px;
+  }
+
+  .active-project {
+    background-color: #2d383f;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    color: #f8f5ec;
+  }
 }
 
-.project-details {
+.project-details-container {
   background-color: #2d383f;
   margin-left: -150px;
   margin-right: -150px;
@@ -34,15 +44,21 @@ h1 {
   display: flex;
 }
 
+.project-details {
+  width: 50%;
+  padding-right: 24px;
+}
+
 .project-details-headlines {
   padding: 16px 0;
 }
 
-.project-link {
+.project-links {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 16px;
+  padding-left: 24px;
 }
 
 .technology-headline {
@@ -57,4 +73,29 @@ h1 {
 .link-and-github {
   display: flex;
   gap: 32px;
+
+  > button {
+    cursor: pointer;
+    font-size: 18px;
+    padding: 13px 30px;
+    border-radius: 30px;
+  }
+
+  .live-test {
+    color: #262e34;
+    background-color: #89bcd8;
+    border: 1px solid #89bcd8;
+    &:hover {
+      background-color: #f8f5ec;
+    }
+  }
+
+  .github {
+    color: #89bcd8;
+    background-color: #2d383f;
+    border: 1px solid #89bcd8;
+    &:hover {
+      background-color: #3f454a;
+    }
+  }
 }
