--- a/src/app/my-skills/my-skills.scss
+++ b/src/app/my-skills/my-skills.scss
@@ -2,7 +2,7 @@ h1 {
   color: #89bcd9;
   font-size: 60px;
   text-align: center;
-  margin-top: 64px;
+  margin-top: 128px;
   margin-bottom: 64px;
 }
 
@@ -32,10 +32,18 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: 16px;
   width: 500px;
   padding-left: 24px;
   background-image: url('/img/ellipse.png');
   background-repeat: no-repeat;
   background-position: center;
+  background-size: contain;
+  min-height: 400px;
+
+  > div {
+    max-width: 300px;
+    text-align: center;
+  }
 }
