--- a/src/app/why-me-section/why-me-section.scss
+++ b/src/app/why-me-section/why-me-section.scss
@@ -2,7 +2,7 @@ h1 {
   color: #89bcd9;
   font-size: 60px;
   text-align: center;
-  margin-top: 64px;
+  margin-top: 128px;
   margin-bottom: 64px;
 }
 
